--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -71,7 +71,9 @@
 
      }
 
-
+     #darkmode-switch {
+        grid-column: 1 / 4;
+    }
 
     .story {
         margin: 1rem 0rem 2rem 0rem;
@@ -117,7 +119,7 @@
         padding: 1em;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 1rem;
-        grid-template-rows: 1fr;
+        grid-template-rows: 1fr 1fr;
         grid-auto-rows: 200px; 
     }
 
@@ -202,6 +204,10 @@
         display: grid;
         grid-column: 1 / 4;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    }
+
+    .gold-members-h2 {
+        grid-column: 1 / 4;
     }
 
 
